--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+body{
+  background: #DAE0E6;
+}
 
 a {
   color: inherit;
@@ -23,4 +26,230 @@ a {
     color: white;
     background: black;
   }
+}
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 60px;
+  background: #f5f5f5;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  padding: 0 2rem;
+  box-shadow:   0 0 10px rgb(186, 186, 186);
+}
+.navbar-rigth {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.navbar-rigth a {
+  width:100px;
+  height: 35px;
+  border-radius: 20px;
+  display: grid;
+  place-items: center;
+}
+.login-a {
+  color: #0079D3;
+  outline: 1px solid #0079D3;
+  background: #f5f5f5;
+  margin-right: 10px;
+}
+.signup-a {
+  background-color: #0079D3;
+  color: #f5f5f5;
+}
+.link-wrapper {
+  width: 50%;
+  min-height: 80px;
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  font-size: 1rem;
+  color: rgb(34, 34, 34);
+  background-color: rgb(255, 255, 255, 0.8);
+  box-shadow: 0 0 10px rgb(186, 186, 186);
+  transition: all 0.3s ease-in-out;
+  padding: 5px 20px;
+  cursor: pointer;
+}
+.link-wrapper:hover {
+  background-color: rgb(255, 255, 255, 0.9);
+  box-shadow: 0 5px 10px rgb(186, 186, 186);
+}
+.link-wrapper a{
+  font-weight: bold;
+  width: 100%;
+  text-align: center;
+  line-height: 3rem;
+}
+.description:hover {
+  color: #0079D3;
+}
+.upvote-section {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.upvote-section button{
+  width: 40px;
+  height: 40px;
+  border: 1px solid #0079D3;
+  color: #0079D3;
+  background: #f5f5f5;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.upvote-section button:hover{
+  background: #0079D3;
+  color: #f5f5f5;
+}
+.votes {
+  margin-left: 20px;
+  width: 100%;
+  padding:0 5px;
+}
+.login, .signup, .post {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
+.login-form {
+  min-height: 400px;
+}
+.singup-form {
+  min-height: 500px;
+}
+.singup-form, .login-form {
+  margin: 100px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 50%;
+  background-color: #f5f5f5;
+  box-shadow:   0 0 10px rgb(186, 186, 186);
+}
+.singup-form input, .login-form input {
+  width: 70%;
+  height: 60px;
+  border: none;
+  padding-left: 10px;
+  outline: 1px solid #0079D3;
+}
+.singup-form button, .login-form button {
+  width: 70%;
+  height: 40px;
+  border-radius: 20px;
+  background-color: #0079D3;
+  color: #f5f5f5;
+  font-weight: bold;
+  font-size: 1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 60px;
+  background: #f5f5f5;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  padding: 0 2rem;
+  box-shadow: 0 0 10px rgb(186, 186, 186);
+}
+.footer h3{
+  width: 150px;
+  height: 40px;
+  font-size: 1rem;
+  border-radius: 20px;
+  display: grid;
+  place-items: center;
+  background-color: #0079D3;
+  color:#f5f5f5;
+  cursor: pointer;
+}
+.post-form {
+  margin: 100px auto;
+  width: 50%;
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #f5f5f5;
+  box-shadow: 0 0 10px rgb(186, 186, 186);
+}
+.post-form input, .post-form textarea {
+  border: none;
+  padding: 5px 10px;
+  outline: 1px solid #0079D3;
+  width: 70%;
+}
+.post-form input {
+  height: 60px;
+}
+.post-form textarea{
+  min-height: 200px;
+  resize: none;
+} 
+.post-form button {
+  width: 70%;
+  height: 40px;
+  border-radius: 20px;
+  background-color: #0079D3;
+  color: #f5f5f5;
+  font-weight: bold;
+  font-size: 1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.dialog {
+  margin: auto;
+  display: flex;
+  gap: 2rem;
+  padding: 10px 20px;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
+  min-width: 50%;
+  min-height: 50%;
+  background: rgb(252, 252, 252);
+  box-shadow: 0 0 10px rgb(186, 186, 186);
+  position: fixed;
+  z-index: 233;
+  transition: all 0.3s ease-in-out;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.content a:hover {
+  color: #0079D3;
+}
+.close {
+  width: 100px;
+  height: 40px;
+  background-color: #0079D3;
+  color: #f5f5f5;
+  font-weight: bold;
+  font-size: 1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
